[project]
name = "Agents"
version = "0.1.0"
description = "we are building Agents"
requires-python = ">=3.11"
dependencies = [
    "autogen>=0.8.4",
    "beautifulsoup4>=4.13.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pyautogen>=0.8.4",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
]
